# lodei

./: .gitignore  Containerfile  README.md  pyproject.toml
lodei/: run.py
lodei/core/: convert.py  eifunctions.py  find.py  functions.py  paired.py  plot_metagene.py  plot_ratios.py  plot_regions.py  plot_wcounts.py
