[build-system]
requires = ["setuptools>=67.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lodei"
version = "0.0.1"
authors = [
  { name="author 1", email="author@example.com" },
  { name="author 2", email="author2@example.com" }
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8.16"


[project.scripts]
lodei = "lodei.run:main"
