[build-system]
requires = ["setuptools>=67.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lodei"
version = "0.0.2"
authors = [
  { name="author 1", email="author@example.com" }
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"


[project.scripts]
lodei = "lodei.run:main"
